<resources>

    <!-- TODO: Names activities and fragments -->
    <string name="app_name">Hey Manager</string>
    <string name="action_refresh">Actualizar</string>
    <string name="title_home">Home</string>
    <string name="title_publish">Add</string>
    <string name="title_activity__profile">Profile</string>
    <string name="title_activity_login_teacher">Teacher</string>
    <string name="title_activity_login_student">Student</string>
    <string name="title_search">Search Files</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add_files">Post</string>
    <string name="title_activity_student_register">Register Student</string>
    <string name="title_activity_teacher_register">Register Teacher</string>


    <!-- TODO: Texts and Hints -->

    <!-- activity main -->
    <string name="button_create_account">CRIAR CONTA</string>
    <string name="button_enter_account">INICIAR SECÇÃO</string>

    <!-- activity loggin -->

    <string name="text_enter_account">Entre para sua conta</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_forget_password">Esqueceste a Password?</string>
    <string name="button_login">LOG IN</string>
    <string name="text_select_status">Seleccione o seu Status</string>


    <!-- activity register -->
    <string name="text_load_picture">Carregue uma Foto</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email_account">Email</string>
    <string name="hint_password_account">Password</string>
    <string name="button_save_account">  Salvar Conta  </string>
    <string name="hint_number">Numero</string>
    <string name="hint_edit_department">Departamento</string>

    <!--        Strings of Activity Register            -->

    <string name="text_put_name">Preencha o seu Nome</string>
    <string name="text_put_email">Preencha o seu Email</string>
    <string name="text_missing_some_simbol">Email incorrecto</string>
    <string name="text_put_password">Preencha a sua Password</string>
    <string name="text_confirm_password">Confirme a sua Password</string>
    <string name="text_differents_password">As Passwords são diferentes</string>
    <string name="text_creating_account">Criando sua Conta...</string>
    <string name="text_register_sucess">Parabéns, a sua Conta esta Criada</string>
    <string name="text_error_register">Erro no Registo</string>

    <!--..........................................................................-->


    <!--        Strings of Fragments Home           -->

    <string name="all_files">TODOS CONTEÚDOS</string>
    <string name="hint_search_files">Pesquisar conteúdos...</string>

    <!--..........................................................................-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
