<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Login">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView11"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        app:civ_border_width="2dp"
        android:layout_marginBottom="24dp"
        app:civ_border_color="@color/colorAccent"
        android:src="@drawable/image_user_offline" />



    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@id/imageView11"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/edit_email" />

    <TextView
        android:id="@+id/text_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/text_forget_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/edit_password"
        android:layout_alignParentEnd="true"/>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_style_button"
        android:text="@string/button_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/extraColor"
        android:layout_below="@id/text_forget_password"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear_layout_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_rectangle_login">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="16dp"
        android:layout_margin="10dp"
        android:textColor="@color/extraColor"
      android:gravity="center"
        android:text="Não tem nenhuma Conta? Regista-se..."/>

    </LinearLayout>


</RelativeLayout>