<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/extraColor"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Teacher_Register">


    <RelativeLayout
        android:id="@+id/relative1_layout_1"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative_layout_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Txt_InputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_name_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Txt_InputEmail"
            android:layout_below="@id/Txt_InputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_email_account_teacher"
                android:layout_below="@id/edit_name_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_account"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Txt_InputPassword"
            android:layout_below="@id/Txt_InputEmail"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/edit_password_account_teacher"
                android:layout_below="@id/edit_email_account_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_account"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Txt_InputDepartment"
            android:layout_below="@id/Txt_InputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_department_teacher"
                android:layout_below="@id/edit_password_account_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_department"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_teacher"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/layout_relative_university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/text_select_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Universidades"
                android:layout_marginBottom="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <RadioGroup
                android:id="@+id/rg_teacher_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle_search"
                android:layout_below="@id/text_select_university"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_metro_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="UNI. METROPOLITANA"

                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/rb_gregorio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UNI. GREGÓRIO SEMEDO"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1" />

            </RadioGroup>

        </RelativeLayout>
    </RelativeLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/btn_save_account_teacher"
        android:layout_below="@id/relative1_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_style_button"
        android:text="Salvar conta "
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/extraColor"
        android:drawablePadding="3dp"
        android:drawableLeft="@drawable/ic_key_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_rectangle_login">

    <TextView
        android:id="@+id/text_login_teacher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textColor="@color/extraColor"
        android:gravity="center"
        android:text="Já tem uma Conta? Log In..."/>

    </LinearLayout>

</RelativeLayout>